--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-body,html {
+html,body {
   margin: 0;
   height: 100%;
-  background: black;
+  background: #000;
   overflow: hidden;
+  font-family: sans-serif;
 }
-canvas { 
-  display:block;
-}
+#container { width: 100%; height: 100vh; display:block; }
+canvas { display:block; }
